# File-Encryption

./: Procfile  README.md  app.py  enscryption_helper.py  pyproject.toml  requirements.txt
templates/: index.html
